Agregar los enlaces adecuados, incluir el algoritmo en js y corregir algunos errores de diseño 1

--- a/QUETZUAL(doctor)/rechazarPregunta.html
+++ b/QUETZUAL(doctor)/rechazarPregunta.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class=" header ">
-        <nav class="navegacion ">
+        <nav class="navegacion">
             <img src="./img/logotipo.png " alt="Logotipo oficial de Quetzual " class="logo ">
             <article>Responder pregunta</article>
             <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
@@ -30,10 +30,12 @@
             </a>
         </div>
     </header>
-    <div class="title">
-        <img src="./img/bxs-left-arrow-circle.svg">
-        <h1>Volver a gestionar preguntas</h1>
-    </div>
+    <a href="./preguntasPendientes.html" class="enlace">
+        <div class="title">
+            <img src="./img/bxs-left-arrow-circle.svg">
+            <h1>Volver a gestionar preguntas</h1>
+        </div>
+    </a>
     <div class="main_container">
         <div class="mini_header2">
             <h2>11/10/2021</h2>
@@ -52,7 +54,7 @@
         </div>
         <div class="flex">
             <button id="rechazar" class="question" onclick="RechaPregunta()">Confirmar</button>
-            <button class="cs">Cancelar</button>
+            <a href="./preguntasPendientes.html" class="enlace"><button class="cs">Cancelar</button></a>
         </div>
     </div>
     <div class="modal" id="modalR">
