--- a/cuenta.html
+++ b/cuenta.html
@@ -93,7 +93,7 @@
                 </b>
             </article>
             <button class="cs">Eliminar cuenta</button> <br>
-            <button class="submit">Deseo permanecer en el sistema</button>
+            <button class="submit" onclick="crm()">Deseo permanecer en el sistema</button>
         </div>
     </div>
     </div>
