--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
                     </select>
                     <input type="password" name="" id="password" placeholder="Contraseña" class="input">
                     <input type="password" name="" id="confpass" placeholder="Confirmar Contraseña" class="input">
-                    <article class="article">Al hacer clic en “Registrarte”, aceptas nuestras
-                        <a href="#" class="a">condiciones</a>, la <a href="#" class="a">politica de datos</a> y la <a href="#" class="a">politica de cookies</a></article>
+                    <article class="article">Al hacer clic en “Registrarte”, aceptas nuestro <a href="./politicas.html" class="a">Aviso de privacidad</a></article>
                     <button type="button" class="submit" onclick="aceptar()" id="enviar">Registrarse </button>
                 </form>
             </div>
