--- a/sesionUsuario.html
+++ b/sesionUsuario.html
@@ -58,48 +58,7 @@
         <div class="mini_header">
             <h2>Edad</h2>
             <h2>Categoria</h2>
-            <h2>4.7
-                <p class="star">★</p>
-            </h2>
-            <h2>150 Reseñas</h2>
-        </div>
-        <div class="sub_header">
-            <h2>22/09/2021 - Respondido: 23/09/2021</h2>
-            <h2>Dr. Juan Manuel Mendoza</h2>
-        </div>
-        <div class="pregunta">
-            <img src="./img/bxs-user.svg" alt="">
-            <div class="preguntas">
-                <h3>Tuve relaciones con mi pareja, y deacuerdo a mis sintomas creo que tengo S.I.D.A. pero temo ir al medico. Podría por favor ayudarme a saber si podría padecer S.I.D.A. y cual sería un posible tratamiento por favor? Estos son mis sintomas:
-                    1.- Dolor al tragar 2.- Diarrea 3.- Llagas en la ingle</h3>
-            </div>
-        </div>
-        <div class="respuesta">
-            <div class="respuestas">
-                <h3>Tus síntomas en general indican que podrías padecer S.I.D.A. Sin embargo, ningún médico puede darte un diagnóstico sin realizar estudio de laboratorio. El tratamiento consiste en antivirales para el VIH. Es necesario que acudas a un médico
-                    lo más pronto posible. No debes temer de ir al doctor, es mejor ir a tiempo y no cuando sea demasiado tarde. Puedes pedir a una persona de confiansa que te acompañe para sentirte más tr</h3>
-            </div>
-            <img src="./img/bx-plus-medical.svg" alt="">
-        </div>
-        <div class="calificacion">
-            <div class="contenedor">
-                <div class="p">¿Te ha resultado útil esta solución?</div>
-                <div class="Estrellas" id="Estrellas"></div>
-            </div>
-        </div>
-    </div>
-    <div class="main_container">
-        <div class="mini_header">
-            <h2>Edad</h2>
-            <h2>Categoria</h2>
-            <h2>4.7
-                <p class="star">★</p>
-            </h2>
-            <h2>150 Reseñas</h2>
-        </div>
-        <div class="sub_header">
-            <h2>22/09/2021 - Respondido: 23/09/2021</h2>
-            <h2>Dr. Juan Manuel Mendoza</h2>
+            <h2>3 preguntas</h2>
         </div>
         <div class="pregunta">
             <img src="./img/bxs-user.svg">
@@ -108,7 +67,7 @@
                     1.- Dolor al tragar 2.- Diarrea 3.- Llagas en la ingle</h3>
             </div>
         </div>
-        <div class="respuesta">
+        <!--<div class="respuesta">
             <div class="respuestas">
                 <h3>Tus síntomas en general indican que podrías padecer S.I.D.A. Sin embargo, ningún médico puede darte un diagnóstico sin realizar estudio de laboratorio. El tratamiento consiste en antivirales para el VIH. Es necesario que acudas a un médico
                     lo más pronto posible. No debes temer de ir al doctor, es mejor ir a tiempo y no cuando sea demasiado tarde. Puedes pedir a una persona de confiansa que te acompañe para sentirte más tr</h3>
@@ -120,6 +79,9 @@
                 <div class="p">¿Te ha resultado útil esta solución?</div>
                 <div class="Estrellas" id="Estrellas"></div>
             </div>
+        </div>-->
+        <div class="respuesta">
+            <a href="./respuestasPregunta.html">Ver respuestas</a>
         </div>
     </div>
     <div class="modal" id="modalR">
