--- a/sesionUsuario.html
+++ b/sesionUsuario.html
@@ -58,7 +58,7 @@
         <div class="mini_header">
             <h2>Edad</h2>
             <h2>Categoria</h2>
-            <h2>3 preguntas</h2>
+            <h2>3 respuestas</h2>
         </div>
         <div class="pregunta">
             <img src="./img/bxs-user.svg">
