Cambios? donde? ah ya vi donde XD

--- a/QUETZUAL(doctor)/cuentaDoctor.html
+++ b/QUETZUAL(doctor)/cuentaDoctor.html
@@ -46,18 +46,22 @@
         <div class="mini_header">
             <h2>Edad</h2>
             <h2>Categoria</h2>
-            <h2>3 respuestas</h2>
         </div>
         <div class="pregunta">
-            <img src="./img/bxs-user.svg" alt="">
+            <img src="./img/bxs-user.svg" class="img">
             <div class="preguntas">
                 <h3>Tuve relaciones con mi pareja, y deacuerdo a mis sintomas creo que tengo S.I.D.A. pero temo ir al medico. Podría por favor ayudarme a saber si podría padecer S.I.D.A. y cual sería un posible tratamiento por favor? Estos son mis sintomas:
                     1.- Dolor al tragar 2.- Diarrea 3.- Llagas en la ingle</h3>
             </div>
         </div>
         <div class="respuesta">
-            <a href="./respuestasPregunta.html">Ver respuestas</a>
+            <div class="respuestas">
+                <h3>Tus síntomas en general indican que podrías padecer S.I.D.A. Sin embargo, ningún médico puede darte un diagnóstico sin realizar estudio de laboratorio. El tratamiento consiste en antivirales para el VIH. Es necesario que acudas a un médico
+                    lo más pronto posible. No debes temer de ir al doctor, es mejor ir a tiempo y no cuando sea demasiado tarde. Puedes pedir a una persona de confiansa que te acompañe para sentirte más tr</h3>
+            </div>
+            <img src="./img/bx-plus-medical.svg" class="img">
         </div>
+    </div>
     </div>
     <div class="card">
         <div class="mini_header2">
