--- a/QUETZUAL(doctor)/respuestasPregunta.html
+++ b/QUETZUAL(doctor)/respuestasPregunta.html
@@ -26,6 +26,7 @@
             </a>
         </div>
     </header>
+    <button onclick="agregarRespuesta()" class="submit">Agregar respuesta</button>
     <div class="main_container">
         <div class="mini_header">
             <h2>Dr. Montero</h2>
@@ -36,12 +37,6 @@
                     lo más pronto posible. No debes temer de ir al doctor, es mejor ir a tiempo y no cuando sea demasiado tarde. Puedes pedir a una persona de confiansa que te acompañe para sentirte más tr</h3>
             </div>
             <img src="./img/bx-plus-medical.svg" alt="">
-        </div>
-        <div class="calificacion">
-            <div class="contenedor">
-                <div class="p">¿Te ha resultado útil esta solución?</div>
-                <div class="Estrellas" id="Estrellas"></div>
-            </div>
         </div>
     </div>
     <div class="modal" id="modalR">
