--- a/hacerPregunta.html
+++ b/hacerPregunta.html
@@ -77,6 +77,7 @@
                 </div>
                 <button class="question" onclick="consultarPregunta()">Consultar respuestas</button>
             </div>
+            <button class="question" onclick="javascript:location.href ='./preguntasSimilares.html'">Ver mas preguntas similares</button>
             <p>¿Aún deseas hacer esta pregunta?</p><br>
             <button class="question" onclick="enviarConfirmacion()">Continuar</button>
         </div>
