--- a/QUETZUAL(doctor)/respuestasPregunta.html
+++ b/QUETZUAL(doctor)/respuestasPregunta.html
@@ -26,7 +26,10 @@
             </a>
         </div>
     </header>
-    <button onclick="agregarRespuesta()" class="submit">Agregar respuesta</button>
+    <form class="alineacion">
+        <input type="text" placeholder="Respuesta" class="area">
+        <button onclick="agregarRespuesta()" class="submit">Agregar respuesta</button>
+    </form>
     <div class="main_container">
         <div class="mini_header">
             <h2>Dr. Montero</h2>
@@ -37,14 +40,6 @@
                     lo más pronto posible. No debes temer de ir al doctor, es mejor ir a tiempo y no cuando sea demasiado tarde. Puedes pedir a una persona de confiansa que te acompañe para sentirte más tr</h3>
             </div>
             <img src="./img/bx-plus-medical.svg" alt="">
-        </div>
-    </div>
-    <div class="modal" id="modalR">
-        <div class="card">
-            <article>
-                <b>Tu Calificación ha sido registrada</b>
-            </article>
-            <img src="./img/check-square-solid-240.png" alt="" onclick="crm()" class="cubitoVerde">
         </div>
     </div>
     <script src="./JS/validar.js"></script>
