Cambios para que mi gatito duerma tranquilo

--- a/QUETZUAL(doctor)/preguntasPendientes.html
+++ b/QUETZUAL(doctor)/preguntasPendientes.html
@@ -33,6 +33,12 @@
         <h1>Preguntas pendientes</h1>
         <hr>
     </div>
+    <div class="filtro">
+        <select name="filtro" id="filtro">
+            <option value="a">Preguntas respondidas</option>
+            <option value="a">Preguntas pendientes</option>
+        </select>
+    </div>
     <div class="main_container">
         <div class="mini_header2">
             <h2>11/10/2021</h2>
