--- a/QUETZUAL(doctor)/respuestasPregunta.html
+++ b/QUETZUAL(doctor)/respuestasPregunta.html
@@ -21,7 +21,7 @@
             <button class="cs" onclick="cerrarSesion()">Cerrar sesión</button>
         </nav>
         <div class="menu">
-            <a href="./sesionUsuario.html">
+            <a href="./preguntasDoctor.html">
                 <img src="./img/bxs-left-arrow.svg" alt="Imagen"> Volver
             </a>
         </div>
